fix(Modals): adds spacing for modal on desktop.

--- a/src/app/styles/components/Modal.scss
+++ b/src/app/styles/components/Modal.scss
@@ -1,4 +1,10 @@
 .Modal {
+  margin-top: 30px;
+
+  @include media-query($mobile) {
+    margin-top: 0;
+  }
+
   &__close {
     top: -22px;
     right: -22px;
